3. Add option to lighten/darken the background of tabs.
4. Use KDE_SESSION_VERSION to determine which KDE prefix (KDE3, or KDE4) to
   seach first for qtc_xxx.themerc files.
5. Update Klearlooks to be more consistent with Clearlooks (lighten tab background,
   use highlight strip on active tab, dont colour active tab)
6. Cache selection pixmaps to speed up drawing.

0.65.4
------
1. Use 'MS Windows' and not 'Windows' for scrollbar type - to aid
   translations.
2. Apply old-style listview lines to Q3ListView's as well.
3. Fix KDE4.3 compilation - patch from Markus Ullmann

0.65.3
------
1. When not using button-like check/radio boxes, use view text as the
   indicator colour.
2. Fix slight tab glitches when using glow tab mouse over and square
   tabs.
3. Fix usage of custom menu text colours.
4. Fix custom menu stripe colour.
5. In config dialog - for gradient directions, use "Top to bottom" instead of
   "Horizontal" and "Left to right" instead of "Vertical"
6. Fix square tabs when using background gradients.
7. Fix clipped triangular sliders.
8. Add support for translations of config dialogs.
    Turkish translation by Necmettin Begiter

0.65.2
------
1. Add option to draw list view lines in pre 0.65 style.
2. Fix some inner gradient bleeding when using max rounding.
3. Fix arora location bar for non gradient backgrounds.
4. Fix 'stripe effect' on scrollbars when using plastik style mouse over.

0.65.1
------
 1. Use a border width of 1 if gradienting popupmenus.
 2. When using darkened menu stripe use popupmenu background colour as the
    base colour.
 3. Match Gtk2 button size better.
 4. Fix gradient menus when not using lighter popup menu backgrounds.
 5. Slightly better looking listview lines.
 6. Use QMetaObject::invokeMethod/Qt::QueuedConnection instead of QTimer to
    initialise KDE4 settings. Thanks to Eike Hein for the idea.
 7. When exporting KDE4 palette to KDE3, call kde-config to ascertain KDE3's
    config dir.